--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js"></script>
-hycrvbjhcxersdfyukb
-  <title>Birthday Project</title>
+
+  <title>Birthday Project.</title>
 </head>
 
 <body>
