--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css">
   <script src="script.js"></script>
 
-  <title>Birthday Project.</title>
+  <title>Birthday Project</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
   <div class="card mb-3">
     <div class="row no-gutters" style="max-width: 600px ; max-width: height 600px">
       <div class="col-md-4">
-        <img src="img/cake.jpg" class="card-img" alt="...">
+        <img src="img/cake.jpg" class="card-img" >
       </div>
       <div class="col-md-8">
         <div class="card-body">
