added font-style to p selector

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
              <p id="AkhanName"></p>
            </div>
-           <input type="button" value="submit" onclick="findakhanname()" class="btn btn-primary">
+           <input type="button" value="submit" onclick="findakhanname()" class="btn btn-primary" id="Akha">
            </div>
            </div>
          </div>
